kubernetes/deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bill-test
spec:
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: bill-test
  template:
    spec:
      containers:
        - name: bill-test
          image: fake-image
          resources:
            requests:
              memory: 128Mi
              cpu: 0.1
          ports:
            - containerPort: 80
              name: http
